fix text spacing

--- a/blog_posts.css
+++ b/blog_posts.css
@@ -194,7 +194,7 @@
     display: flex;
     flex-direction: column;
     gap: 40px;
-    max-width: 800px; /* Ensure a reasonable width for readability */
+    max-width: 1000px; /* Ensure a reasonable width for readability */
     width: 100%;
     padding: 0 20px; /* Add padding to prevent content from hitting the edges */
   }
@@ -210,6 +210,7 @@
   .title-wrapper h2 {
     font-size: 2em;
     margin-bottom: 10px;
+    line-height: 1.3;
   }
   
   .meta {
@@ -362,7 +363,7 @@
         padding: 20px;
         gap: 20px;
     }
-
+/*
     .news section {
         gap: 20px;
     }
@@ -372,6 +373,7 @@
         max-width: unset;
         width: 100%;
     }
+*/
 
     .modal .content-image {
         flex: 1 1 100%;
@@ -409,6 +411,7 @@
         margin: 8px 0 0 0;
     }
 
+/*
     .news-wrapper .news section {
         flex-flow: column nowrap;
     }
@@ -430,4 +433,5 @@
         font-size: 16px;
         line-height: 24px;
     }
+*/
 }
